<resources>
    <string name="app_name">MoneyRPG</string>
    <string name="battle">battle</string>
    <string name="boost">boost</string>
    <string name="coin">coin</string>
    <string name="select_pokemon_message">please select your pokemon</string>
    <string name="reset">reset</string>
    <string name="random">random</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="agi">AGI</string>
    <string name="vit">VIT</string>
    <string name="wis">WIS</string>
    <string name="luc">LUC</string>
    <string name="default_price">+$0</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="check_reset">Are you sure to reset all player data?</string>
    <string name="check_random">Are you sure to random a pokemon?</string>
    <string name="back">back</string>
    <string name="new_data">new</string>
    <string name="wallet">wallet</string>
    <string name="balance">Balance</string>
    <string name="title">title</string>
    <string name="category">category</string>
    <string name="date">date</string>
    <string name="money">money</string>
    <string name="income">income</string>
    <string name="outcome">outcome</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="check_delete">Are you sure to delete?</string>
    <string name="exp">EXP</string>
    <string name="win">You Win!</string>
    <string name="lose">You Lose...</string>
</resources>