<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/pixel"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pixel"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:text="@string/category"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pixel"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pixel"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:text="@string/money"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/pixel"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:letterSpacing="0.1"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/income_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/pixel"
                    android:letterSpacing="0.1"
                    android:text="@string/income"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/outcome_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/pixel"
                    android:letterSpacing="0.1"
                    android:text="@string/outcome"
                    android:textSize="20sp"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_input_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/pixel"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.1"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/select_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:fontFamily="@font/pixel"
                    android:letterSpacing="0.1"
                    android:text="@string/edit"
                    android:textSize="20sp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/money_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:digits="0123456789"
                android:ems="10"
                android:fontFamily="@font/pixel"
                android:hint="@string/money"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:letterSpacing="0.1"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:text="@string/cancel"
            android:textColor="#F44336"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:text="@string/delete"
            android:textColor="#F44336"
            android:textSize="20sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:text="@string/ok"
            android:textColor="#43A047"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>