<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exp_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/pixel"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/coin_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/pixel"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.gemini910610.moneyrpg.RadarChart
            android:id="@+id/radar_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/battle_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF5722"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:onClick="battle"
            android:text="@string/battle"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/boost_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5FC3FF"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:onClick="showBoostDialog"
            android:text="@string/boost"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/charge_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C35FFF"
            android:fontFamily="@font/pixel"
            android:letterSpacing="0.1"
            android:onClick="gotoWallet"
            android:text="@string/wallet"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>